--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,6 @@ services:
       interval: 1m30s
       timeout: 10s
       retries: 3
-    volumes:
-      - ./src:/app/src:ro
-      - ./logs:/app/logs
+    # volumes:
+    #   - ./src:/app/src:ro
+    #   - ./logs:/app/logs
