--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "dev": "tsx watch src/main.ts",
     "start": "node build/main.js",
     "test": "vitest",
+    "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:seed": "prisma db seed"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
     "@types/uuid": "^9.0.8",
-    "prisma": "^5.15.1",
+    "@vitest/ui": "^4.0.10",
+    "prisma": "^6.19.0",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
@@ -24,12 +27,12 @@
     "tsx": "^4.15.5",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vitest": "^4.0.10"
   },
   "dependencies": {
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.3",
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^6.19.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "fastify-type-provider-zod": "^6.1.0",
